fix(form-row): adjust spacing on mobile

--- a/src/scss/forms/template/_forms.scss
+++ b/src/scss/forms/template/_forms.scss
@@ -27,6 +27,7 @@
 
   @include media-breakpoint-down($bp-sm) {
     flex-direction: column;
+    gap: $spacing-lg;
   }
 }
 
